c/examples/writing-a-c-compiler-tests/tests/chapter_8/invalid_semantics/out_of_scope_do_loop.c
/* Test case from Listing 8-3:
 * A variable declared in a loop body is out of scope in the controlling expression
 */

int main(void) {
    do {
        int a = a + 1;
    } while (a < 100);
}